--- a/pyproject.toml
+++ b/pyproject.toml
@@ -24,11 +24,10 @@ pymongo = {extras = ["srv"], version = "^4.13.2"}
 gunicorn = "^21.2.0"
 werkzeug = "^3.0.0"
 
+# Campus internal dependencies
+campus-yapper = {git = "https://github.com/nyjc-computing/yapper-python.git"}
+
 [tool.poetry.extras]
-# Optional dependency groups for deployment modes
-vault = ["flask", "bcrypt", "psycopg2-binary", "gunicorn", "werkzeug"]
-apps = ["flask", "bcrypt", "psycopg2-binary", "pymongo", "gunicorn", "werkzeug"]
-full = ["flask", "bcrypt", "psycopg2-binary", "pymongo", "gunicorn", "werkzeug"]
 
 [tool.poetry.group.dev.dependencies]
 pylint = "^3.0"
